chore | backgrounds atachmend fixed on ios.

--- a/css/scss/layout/_banner.scss
+++ b/css/scss/layout/_banner.scss
@@ -41,6 +41,7 @@
 
 @media (max-width: 480px) {
     .banner {
+        background-attachment: scroll;
         span {
             font-size: 1.5rem;
         }
