--- a/css/scss/layout/_hero.scss
+++ b/css/scss/layout/_hero.scss
@@ -73,6 +73,8 @@
     }
 }
 @media (max-width: 480px) {
-    
+    .hero {
+        background-attachment: scroll;
+    }
 }
 
