--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,11 @@ h3 {
     font-size: 1rem;
   }
 }
+@media (max-width: 480px) {
+  .hero {
+    background-attachment: scroll;
+  }
+}
 .reserve {
   background-color: #2E3947;
   box-shadow: 0px 4px 10px #2E3947;
@@ -546,7 +551,7 @@ h3 {
     padding: 1rem;
     background: url(../src/img/guadalajara/mariachi.jpg) no-repeat 40% 0%;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
   }
   .experiences .content {
     display: grid;
@@ -738,6 +743,9 @@ h3 {
 }
 
 @media (max-width: 480px) {
+  .banner {
+    background-attachment: scroll;
+  }
   .banner span {
     font-size: 1.5rem;
   }
